<resources>
    <string name="app_name">Lotech</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">I do not have account yet</string>
    <string name="signup">Sign Up</string>
    <string name="back_to_login">Back To Login</string>
    <string name="name">Name</string>
    <string name="image">image</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="konfirmasi_text">Konfirmasi email anda, kemudian silahkan melakukan pengubahan kata sandi melalui email yang Lotech kirimkan pada email anda</string>
    <string name="kembali_ke_halaman_login">Kembali ke halaman Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="female">Perempuan</string>
    <string name="male">Laki-laki</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="height">Tinggi Badan</string>
    <string name="weight">Berat Badan</string>
    <string name="date">Tanggal</string>
    <string name="birth_date">Tanggal Lahir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_homepage">My Home Page</string>
    <string name="value_fiture">4 Fiture</string>
    <string name="informasi_kesehatan">Informasi Kesehatan</string>
    <string name="detecting_calorie">CALORIES CHECK</string>
    <string name="home_menu">Home</string>
    <string name="chat_menu">Chat</string>
    <string name="profile_menu">Profile</string>
    <string name="cth_name">Greates of All Time</string>
    <string name="email_error">Mohon isi E-mail dengan benar</string>
    <string name="confirmedForgotPassowrdTitle">Berhasil Terkonfirmasi</string>
    <string name="messageConfirmed">Silahkan cek E-mail kamu, Lotech telah mengirimkan email untuk mengubah password</string>
    <string name="registered">Berhasil mendaftar</string>
    <string name="messageRegistered">Silahakan verifikasi akun anda melalui email yang telah Lotech kirimkan ke E-mail kamu</string>
    <string name="photo_profil">Photo Profil</string>
    <string name="food_quality">FOOD QUALITY</string>
    <string name="lifestyle">LIFESTYLE</string>

    <string name="title_lifestyle">Lifestyle Information</string>
    <string name="manage_your_lifestyle">Manage Your Lifestyle</string>
    <string name="with">With</string>
    <string name="lotech">Low Calories Technology</string>

    <string name="informasi_pribadi">Informasi Pribadi</string>

    <string name="good_morning">Selamat Pagi</string>
    <string name="good_afternoon" translatable="false">Selamat Siang</string>
    <string name="good_evening">Selamat Sore</string>
    <string name="good_night">Selamat Malam</string>
    <string name="button">button</string>
    <string name="tulis_pesan_anda">Tulis pesan anda</string>

    <string name="lorem_insum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_photo_profile">Pilih Foto</string>

    <string name="tv_food_quality">FOOD QUALITY</string>
    <string name="hello">Hallo</string>
    <string name="jumlah_kalori">Jumlah Kalori</string>
    <string name="keterangan">Berdasarkan berat badan, tinggi badan, dan umur, kamu disarankan untuk mengkonsumsi kalori sebesar ${Jumlah Kalori}/ hari dan hari ini kamu mengkonsumsi ${Jumlah kalori di input}, sehingga:</string>
    <string name="kurang_cukup_berlebihan">Kurang/ Cukup/ Berlebihan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="masukan_jenis_makanan">Tuliskan nama makanan yang kamu makan, contoh:  Ayam Goreng, Nasi Goreng, Sayur Daun Singkong</string>
    <string name="carbohidrat">Karbohidrat: </string>
    <string name="energi">Energi:</string>
    <string name="protein">Protein:</string>
    <string name="lemak">Lemak:</string>
    <string name="serat">Serat:</string>
    <string name="vitaminC">Vitamin C:</string>
    <string name="carbihidrat_g">Karbohidrat (g)</string>
    <string name="energi_kal">Energi (kal)</string>
    <string name="protein_g">Protein (g)</string>
    <string name="lemak_g">Lemak(g)</string>
    <string name="serat_g">Serat (g)</string>
    <string name="vitamin_g">Vitamin C (mg)</string>
    <string name="submit">Submit</string>

    <string name="activity">Aktivitas</string>
    <string name="history">Riwayat</string>


</resources>