<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.goat.lotech.ui.fragment.HomeFragment"
        android:label="@string/home_menu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.goat.lotech.ui.fragment.ChatFragment"
        android:label="@string/chat_menu"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.goat.lotech.ui.fragment.ProfileFragment"
        android:label="@string/profile_menu"
        tools:layout="@layout/fragment_profile" />
</navigation>